# bip0039

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  run.yml  test.yml
src/: bip39.rs  crypto.rs  error.rs  keytype.rs  language.rs  lib.rs  main.rs
tests/: validate.rs
