[package]
name = "bip0039"
version = "0.1.0"
edition = "2021"
authors = ["eclair-lumiere"]
homepage = "https://github.com/eclair-lumiere"
repository = "https://github.com/eclair-lumiere/bip0039"
keywords = ["bip39", "mnemonic"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.5"
serde = "1.0.151"
bitreader = "0.3.6"
bit-vec = "0.6.3"